# LakeSuperiorStreams

./: CMakeLists.txt  README.md  main.cpp
lib/DataBase/: CSVProcessor.cpp  CSVProcessor.h  DataBase.cpp  DataBase.h  DataManager.cpp  DataManager.h  DataSet.cpp  DataSet.h  DataSetBuilder.cpp  DataSetBuilder.h  Datum.cpp  Datum.h  IDataProcessor.h  QueryManager.cpp  QueryManager.h  Time.h
lib/StreamData/: Tischner Example - Sheet1.csv  testCSV - Sheet1.csv  testCSV - TwoRow.csv
tests/: test00_IDataProcessor.cpp  test00_TimeSortedInsert.cpp  test01_SearchByTime.cpp  test01_Variance.cpp  test_DataSet.cpp  test_DataSetBuilder.cpp  test_TimeSeries.cpp  test_getTime.cpp
